# Trilib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GITHUB_READY.md  LICENSE  README.md  TESTING.md  example.cpp  trilib.hpp  veclib.hpp
test/: README.md  test_trilib.cpp  test_veclib.cpp
